# rAudioClasses

./: .gitignore  README.md
dll_libs/x86_64-linux/: libgme.so.0.6.4  libhvl.so.1.9.0  libxmp.so.4.6.3
modules/: Makefile
modules/StSound-main/StSoundLibrary/: CMakeLists.txt
modules/asap-code/: Makefile  asap.c  asap.h  asapconv  asapinfo.fu
modules/asap-code/6502/: CMakeLists.txt
modules/asap-code/release/: release.mk
modules/asap-code/win32/: gui.rc  info_dlg.c  settings_dlg.c
plugins_src/: build_all.sh  build_xmp.sh  clean.sh  openmpt.sh  openmptW.sh  test.sh
plugins_src/StSound/: CMakeLists.txt  win64_build.sh
plugins_src/StSound/StSoundLibrary/: CMakeLists.txt  CMakeLists.txt_old
plugins_src/StSound/build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
plugins_src/StSound/build-linux/StSoundLibrary/: Makefile  cmake_install.cmake  libStSoundLibrary.so.1  libStSoundLibrary.so.1.0.0
plugins_src/StSound/build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
plugins_src/StSound/build-windows/StSoundLibrary/: Makefile  cmake_install.cmake
plugins_src/asap/: asap.c  build_win64.sh
plugins_src/game_music_emu_0.6.4/: CMakeLists.txt  linux_build.sh  toolchain-mingw.cmake  win64_build.sh
plugins_src/game_music_emu_0.6.4/gme/: CMakeLists.txt
plugins_src/hivelytracker/: build_win64.sh  makefile  replay.c  replay.h
plugins_src/libopenmpt-0.8.3/: Doxyfile  Makefile  config.status  configure  configure.ac  libopenmpt.la  libtool
plugins_src/libopenmpt-0.8.3/.libs/: libopenmpt.lai  libopenmpt.so.0.5.5
plugins_src/libopenmpt-0.8.3/common/: libopenmpt_la-ComponentManager.lo  libopenmpt_la-Logging.lo  libopenmpt_la-Profiler.lo  libopenmpt_la-mptFileType.lo  libopenmpt_la-mptPathString.lo  libopenmpt_la-mptRandom.lo  libopenmpt_la-mptStringBuffer.lo  libopenmpt_la-mptTime.lo  libopenmpt_la-serialization_utils.lo  libopenmpt_la-version.lo
plugins_src/libopenmpt-0.8.3/libopenmpt/: la-libopenmpt_c.lo  la-libopenmpt_cxx.lo  la-libopenmpt_ext_impl.lo  la-libopenmpt_impl.lo  libopenmpt.pc
plugins_src/libopenmpt-0.8.3/man/: openmpt123.1
plugins_src/libopenmpt-0.8.3/sounddsp/: libopenmpt_la-AGC.lo  libopenmpt_la-DSP.lo  libopenmpt_la-EQ.lo  libopenmpt_la-Reverb.lo
plugins_src/libopenmpt-0.8.3/soundlib/: libopenmpt_la-AudioCriticalSection.lo  libopenmpt_la-ContainerMMCMP.lo  libopenmpt_la-ContainerPP20.lo  libopenmpt_la-ContainerUMX.lo  libopenmpt_la-ContainerXPK.lo  libopenmpt_la-Dlsbank.lo  libopenmpt_la-Fastmix.lo  libopenmpt_la-ITCompression.lo  libopenmpt_la-ITTools.lo  libopenmpt_la-InstrumentExtensions.lo  libopenmpt_la-InstrumentSynth.lo  libopenmpt_la-Load_667.lo  libopenmpt_la-Load_669.lo  libopenmpt_la-Load_amf.lo  libopenmpt_la-Load_ams.lo  libopenmpt_la-Load_c67.lo  libopenmpt_la-Load_cba.lo  libopenmpt_la-Load_dbm.lo  libopenmpt_la-Load_digi.lo  libopenmpt_la-Load_dmf.lo  libopenmpt_la-Load_dsm.lo  libopenmpt_la-Load_dsym.lo  libopenmpt_la-Load_dtm.lo  libopenmpt_la-Load_etx.lo  libopenmpt_la-Load_far.lo  libopenmpt_la-Load_fc.lo  libopenmpt_la-Load_fmt.lo  libopenmpt_la-Load_ftm.lo  libopenmpt_la-Load_gdm.lo  libopenmpt_la-Load_gmc.lo  libopenmpt_la-Load_gt2.lo  libopenmpt_la-Load_ice.lo  libopenmpt_la-Load_imf.lo  libopenmpt_la-Load_ims.lo  libopenmpt_la-Load_it.lo  libopenmpt_la-Load_itp.lo  libopenmpt_la-Load_kris.lo  libopenmpt_la-Load_mdl.lo  libopenmpt_la-Load_med.lo  libopenmpt_la-Load_mid.lo  (+75 more)
plugins_src/libxmp-4.6.3/: CMakeLists.txt  build.sh
plugins_src/zxTune/: CMakeLists.txt  CMakeLists.txt_
plugins_src/zxTune/build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
plugins_src/zxTune/build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: CommonTypes.pas  ayfly_detect.inc  fftw.pas  raudio.lpk  raudio.pas  raudiofiledetector.pas  raudiointf.pas  raudioplayer.pas  speccy_detect.inc
src/backup/: CommonTypes.pas.bak  ayfly_detect.inc.bak  fftw.pas.bak  raudio.lpk.bak  raudio.pas.bak  raudiofiledetector.pas.bak  raudiointf.pas.bak  raudioplayer.pas.bak  raudioplayerintf.pas.bak  speccy_detect.inc.bak
src/bindings/: libasap.pas  libasapstatic.pas  libayfly.pas  libgme.pas  libhvl.pas  libopenmpt.pas  libraudio.pas  libsidplayfp.pas  libstsoundlibrary.pas  libvgmplay.pas  libxmp.pas  libzxtune.pas
src/bindings/backup/: libasap.pas.bak  libasapstatic.pas.bak  libgme.pas.bak  libhvl.pas.bak  libopenmpt.pas.bak  libraudio.pas.bak  libraudio_static.pas.bak  libsc68.pas.bak  libsidplayfp.pas.bak  libstsoundlibrary.pas.bak  libvgmplay.pas.bak  libxmp.pas.bak  libzxtune.pas.bak
src/extra/: raudioextra.pas
src/lib/x86_64-linux/: CommonTypes.ppu  libasap.ppu  libasapstatic.ppu  libgme.ppu  libhvl.ppu  libopenmpt.ppu  libraudio.ppu  libraudio_static.ppu  libstsoundlibrary.ppu  libxmp.ppu  libzxtune.ppu  rasapaudioplayer.ppu  raudio.compiled  raudio.ppu  raudiofiledetector.ppu  raudiointf.ppu  raudioplayer.ppu  rdefaultaudioplayer.ppu  rgmeaudioplayer.ppu  rhivelyaudioplayer.ppu  ropenmptaudioplayer.ppu  rstsoundaudioplayer.ppu  rxmpaudioplayer.ppu  rzxtuneaudioplayer.ppu
src/lib/x86_64-win64/: CommonTypes.ppu  libasap.ppu  libayfly.ppu  libgme.ppu  libhvl.ppu  libopenmpt.ppu  libraudio.ppu  libstsoundlibrary.ppu  libxmp.ppu  libzxtune.ppu  rasapaudioplayer.ppu  (+13 more)
src/players/: bandanalyzer.inc  rasapaudioplayer.pas  rayflyaudioplayer.pas  rdefaultaudioplayer.pas  rgmeaudioplayer.pas  rhivelyaudioplayer.pas  ropenmptaudioplayer.pas  ropenmptplayer.pas  rstsoundaudioplayer.pas  rvgmaudioplayer.pas  rxmpaudioplayer.pas  rzxtuneaudioplayer.pas
test/: libxmp.so.4  link15711.res  link19666.res  ppas.sh  project1.lpi  project1.lps  spectrum_vis.pas  unit1.pas
test/backup/: project1.lpi  project1.lps  spectrum_vis.pas  unit1.lfm  unit1.pas
test/x86_64-linux/: libayfly.so.0.0.25  libfc14audiodecoder.so.1.0.3  libhvl.so.1.9.0  libopenmpt.so.0.5.5  libopenmpt.so.4  libopenmpt.so.6
test_win64/: link19521.res  link29545.res  link42422.res  link43956.res  project1.exe.ppdb  project1.lps
test_win64/backup/: project1.lps  unit1.lfm
test_win64/x86_64-linux/: libStSoundLibrary.so.1.0.0  libopenmpt.so.6
(+205 files in other folders)
